features section styling, alignment issues with text containers grrr

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -112,6 +112,28 @@ p {
 	color: #b0b0b0;
 }
 
+.feat h2 {
+	text-align: center;
+	font-weight: 100;
+	font-size: 50px;
+	margin-bottom: 70px;
+}
+
+.feat h3 {
+	font-family: 'Monserrat', sans-serif;
+	text-transform: uppercase;
+	font-size: 14px;
+	font-weight: 600;
+}
+
+.feat p{
+	line-height: 25px;
+}
+
+.feat i {
+	font-size: 20px;
+	color: #B1F6CB;
+}
 
 /*--------------- Footer*/
 .footer_wrap{
